[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "setuptools"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "quri-parts-cuquantum"
version = "0.0.1"
description = "A plugin to use cuQuantum with QURI Parts"
authors = ["AIST"]
readme = "README.md"
repository = "https://github.com/QunaSys/quri-parts-cuquantum"
license = "Apache-2.0"
keywords = ["quantum", "quantum computing", "cuQuantum"]
classifiers = ["Topic :: Scientific/Engineering :: Physics", "Typing :: Typed"]
packages = [{ include = "quri_parts" }]


[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"


[tool.poetry.dependencies]
python = ">=3.9.8,<4"
numpy = "^1.26.3"
quri-parts = "<1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
quri-parts-stim = "<1.0.0"
quri-parts-qulacs = "<1.0.0"
docformatter = "^1.4,!=1.6.0"
pytest = ">=7.0.1,<9.0.0"
qulacsvis = { version = "0.7.3", python = ">=3.9.8,<3.12" }

[tool.poetry.group.doc.dependencies]
Sphinx = ">=4.4,<8.0"
furo = ">=2022.2.23,<2024.0.0"
sphinx-autobuild = "^2021.3.14"
nbsphinx = ">=0.8.9,<0.10.0"
ipython = "^8.4.0"
notebook = ">=6.4.12,<8.0.0"
myst-parser = ">=0.18.1,<2.1.0"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
